--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrandPy</title>
-</head>
+{% block head %}
+<title>GrandPy</title>
+{% endblock %}
 
-<body>
-    <h1>Hello world</h1>
-</body>
-
-</html>
+{% block body %}
+<H1>JINJAAAAAAAA</H1>
+{% endblock %}
