--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
 
     <header>
         <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
-            <a class="navbar-brand col-6 col-md-4 col-lg-3" href="#">
+            <a class="navbar-brand" href="#">
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
             </a>
