--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
+        <nav class="navbar bg-dark navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="#">
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
@@ -34,6 +34,10 @@
             </div>
         </nav>
     </header>
+
+    <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
+        <div>Footer</div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
