--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -15,4 +15,12 @@ body {
   }
 }
 
+.footerIcons {
+  text-align: center;
+}
+
+.fbBtn {
+  margin: 4px;
+}
+
 /*# sourceMappingURL=style.css.map */
