--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -17,7 +18,7 @@
 
     <header>
         <nav class="navbar bg-dark navbar-expand-lg navbar-dark fixed-top">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
             </a>
@@ -28,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Qui suis-je ?</a>
+                        <a class="nav-link" href="/about">Qui suis-je ?</a>
                     </li>
                 </ul>
             </div>
@@ -36,7 +37,14 @@
     </header>
 
     <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
-        <div>Footer</div>
+        <div class="footerIcons container">
+            <a href="https://github.com"><button class="btn btn-secondary" type="button"><i
+                        class="bi bi-github"></i></button></a>
+            <a href="https://facebook.com"><button class="fbBtn btn btn-secondary" type="button"><i
+                        class="bi bi-facebook"></i></button></a>
+            <a href="https://linkedin.com"><button class="btn btn-secondary" type="button"><i
+                        class="bi bi-linkedin"></i></button></a>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
