--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,6 +4,20 @@
 <title>GrandPy</title>
 {% endblock %}
 
-{% block body %}
+{% block header %}
+{% endblock %}
 
+{% block container %}
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4" id="myName">RONDET Romain</h1>
+        <p class="lead" id="myDescription">Fullstack Developper.</p>
+    </div>
+</div>
+{% endblock %}
+
+{% block footer %}
+{% endblock %}
+
+{% block script %}
 {% endblock %}
