--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,14 @@
 <title>GrandPy</title>
 {% endblock %}
 
-{% block body %}
+{% block header %}
+{% endblock %}
 
+{% block container %}
+{% endblock %}
+
+{% block footer %}
+{% endblock %}
+
+{% block script %}
 {% endblock %}
