--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -1,10 +1,14 @@
 @import "../node_modules/rfs/scss";
 
-body {
-    font-family: 'Montserrat', sans-serif;
+html {
+    height: 100%;
+    display: grid;
+    place-items: center;
 }
 
-#navbarSupportedContent {
+body {
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
     text-align: center;
 }
 
@@ -12,10 +16,23 @@ body {
     @include font-size(2rem);
 }
 
-.footerIcons{
+#aboutMe {
     text-align: center;
 }
 
-.fbBtn {
+
+#myName {
+    @include font-size(1.6rem);
+}
+
+#myDescription {
+    @include font-size(1.2rem);
+}
+
+#footerIcons{
+    text-align: center;
+}
+
+#facebookButton {
     margin: 4px;
 }
