--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,11 +22,11 @@
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#aboutMe"
+                aria-controls="aboutMe" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="aboutMe">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/about">Qui suis-je ?</a>
@@ -34,17 +34,23 @@
                 </ul>
             </div>
         </nav>
+        {% block header %}{% endblock %}
     </header>
 
+    <div>
+        {% block container %}{% endblock %}
+    </div>
+
     <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
-        <div class="footerIcons container">
+        <div class="container" id="footerIcons">
             <a href="https://github.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-github"></i></button></a>
-            <a href="https://facebook.com"><button class="fbBtn btn btn-secondary" type="button"><i
+            <a href="https://facebook.com"><button class="btn btn-secondary" type="button" id="facebookButton"><i
                         class="bi bi-facebook"></i></button></a>
             <a href="https://linkedin.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-linkedin"></i></button></a>
         </div>
+        {% block footer %}{% endblock %}
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -53,7 +59,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-    {% block body %}{% endblock %}
+    {% block script %}{% endblock %}
 </body>
 
 </html>
