--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,11 +8,13 @@
 {% endblock %}
 
 {% block container %}
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4" id="myName">RONDET Romain</h1>
-        <p class="lead" id="myDescription">Fullstack Developper.</p>
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4" id="myName">RONDET Romain</h1>
+    <p class="lead" id="myDescription">Fullstack Developper.</p>
+    <hr class="my-4">
+    <p id="myQuote">If you are working on something that you really care about, you don’t have to be pushed. The vision
+        pulls you.
+    </p>
 </div>
 {% endblock %}
 
