--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,11 @@
 {% endblock %}
 
 {% block container %}
+<div class="container" id="textArea">
+    <div class="mb-3">
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+</div>
 {% endblock %}
 
 {% block footer %}
