--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,12 @@
 {% endblock %}
 
 {% block container %}
-<div class="container" id="textArea">
+<div class="container" id="chatBox">
+    <div class="card" id="displayText">
+        <div class="card-body">
+            <p class="card-text">Bonjour, ici GrandPy !</p>
+        </div>
+    </div>
     <div class="mb-3">
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
