--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,17 @@
-html {
-  height: 100%;
+html, body {
+  font-family: "Montserrat", sans-serif;
   display: grid;
-  place-items: center;
+  height: 100%;
+  width: 100%;
+  padding-top: 80px;
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
+.jumbotron {
+  text-align: center;
+  padding: 50px;
+  margin-right: 4px;
+  margin-left: 4px;
+  margin-bottom: 130px;
 }
 
 .navbar-brand {
@@ -15,10 +21,6 @@ body {
   .navbar-brand {
     font-size: 2rem;
   }
-}
-
-.jumbotron {
-  margin: 4px;
 }
 
 #myName {
@@ -36,6 +38,16 @@ body {
 
 #myQuote {
   font-size: 1rem;
+  margin-top: 100px;
+}
+
+#chatBox {
+  max-width: 700px;
+  margin-bottom: 130px;
+}
+
+#displayText {
+  height: 300px;
 }
 
 #aboutMe {
