--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -1,21 +1,23 @@
 @import "../node_modules/rfs/scss";
 
-html {
-    height: 100%;
+html, body {
+    font-family: 'Montserrat', sans-serif;
     display: grid;
-    place-items: center;
+    height:100%;
+    width: 100%;
+    padding-top: 80px;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
+.jumbotron {
+    text-align: center;
+    padding: 50px;
+    margin-right: 4px;
+    margin-left: 4px;
+    margin-bottom: 130px;
 }
 
 .navbar-brand {
     @include font-size(2rem);
-}
-
-.jumbotron {
-    margin: 4px;
 }
 
 #myName {
@@ -28,6 +30,16 @@ body {
 
 #myQuote {
     @include font-size(1rem);
+    margin-top: 100px;
+}
+
+#chatBox {
+    max-width: 700px;
+    margin-bottom: 130px;
+}
+
+#displayText {
+    height: 300px;
 }
 
 #aboutMe {
