--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,12 +10,12 @@
 {% block container %}
 <div class="container" id="chatBox">
     <div class="card" id="displayText">
-        <div class="card-body">
+        <div class="card-body" id="chatZone">
             <p class="card-text">Bonjour, ici GrandPy !</p>
         </div>
     </div>
     <div class="mb-3">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <textarea class="form-control" id="userInput" rows="3"></textarea>
     </div>
 </div>
 {% endblock %}
