--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,12 +9,11 @@
 
 {% block container %}
 <div class="jumbotron">
-    <h1 class="display-4" id="myName">RONDET Romain</h1>
-    <p class="lead" id="myDescription">Fullstack Developper.</p>
+    <h1 class="display-4 myTitle">RONDET Romain</h1>
+    <p class="lead">Fullstack Developper.</p>
     <hr class="my-4">
-    <p id="myQuote">If you are working on something that you really care about, you don’t have to be pushed. The vision
-        pulls you.
-    </p>
+    <p class="myText">If you are working on something that you really care about, you don’t have to be pushed. The
+        vision pulls you.</p>
 </div>
 {% endblock %}
 
