--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,8 +8,8 @@
 {% endblock %}
 
 {% block container %}
-<div class="container" id="chatBox">
-    <div class="card" id="displayText">
+<div class="container chatBox">
+    <div class="card displayText">
         <div class="card-body" id="chatZone">
             <p class="card-text">Bonjour, ici GrandPy !</p>
         </div>
