first ajax request

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,9 +14,11 @@
             <p class="card-text">Bonjour, ici GrandPy !</p>
         </div>
     </div>
-    <div class="mb-3">
-        <textarea class="form-control" id="userInput" rows="3"></textarea>
-    </div>
+    <form id="userInput">
+        <div class="form-group">
+            <textarea class="form-control" rows="3"></textarea>
+        </div>
+    </form>
 </div>
 {% endblock %}
 
