--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,9 +14,9 @@
             <p class="card-text">Bonjour, ici GrandPy !</p>
         </div>
     </div>
-    <form id="userInput">
+    <form>
         <div class="form-group">
-            <textarea class="form-control" rows="3"></textarea>
+            <textarea class="form-control" id="userInput" rows="3"></textarea>
         </div>
     </form>
 </div>
