--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -8,6 +8,12 @@ html, body {
     padding-top: 80px;
 }
 
+#map {
+    width: 75%;
+    height: 300px;
+    background: grey;
+}
+
 .jumbotron {
     text-align: center;
     padding: 50px;
