--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container chatBox">
     <div class="card displayText">
         <div class="card-body" id="chatZone">
-            <p class="card-text">Bonjour, ici GrandPy !</p>
+            <p>Bonjour, je suis grandpy le super robot !</p>
         </div>
     </div>
     <form>
