--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,6 +6,12 @@ html, body {
   padding-top: 80px;
 }
 
+#map {
+  width: 75%;
+  height: 300px;
+  background: grey;
+}
+
 .jumbotron {
   text-align: center;
   padding: 50px;
