--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,10 +9,10 @@
 
 {% block container %}
 <div class="jumbotron">
-    <h1 class="display-4 myTitle">RONDET Romain</h1>
+    <h1 class="display-4 my-title">RONDET Romain</h1>
     <p class="lead">Fullstack Developper.</p>
     <hr class="my-4">
-    <p class="myText">If you are working on something that you really care about, you don’t have to be pushed. The
+    <p class="my-text">If you are working on something that you really care about, you don’t have to be pushed. The
         vision pulls you.</p>
 </div>
 {% endblock %}
