--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,15 +8,15 @@
 {% endblock %}
 
 {% block container %}
-<div class="container chatBox">
-    <div class="card displayText">
-        <div class="card-body" id="chatZone">
+<div class="container chat-box">
+    <div class="card display-text">
+        <div class="card-body" id="chat-zone">
             <p>Bonjour, je suis grandpy le super robot !</p>
         </div>
     </div>
     <form>
         <div class="form-group">
-            <textarea class="form-control" id="userInput" rows="3"></textarea>
+            <textarea class="form-control" id="user-input" rows="3"></textarea>
         </div>
     </form>
 </div>
