--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,11 +29,11 @@
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".aboutMe"
-                aria-controls="aboutMe" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".about-me"
+                aria-controls="about-me" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse aboutMe">
+            <div class="collapse navbar-collapse about-me">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/about">Qui suis-je ?</a>
@@ -49,10 +49,10 @@
     </div>
 
     <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
-        <div class="container footerIcons">
+        <div class="container footer-icons">
             <a href="https://github.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-github"></i></button></a>
-            <a href="https://facebook.com"><button class="btn btn-secondary facebookButton" type="button"><i
+            <a href="https://facebook.com"><button class="btn btn-secondary facebook-button" type="button"><i
                         class="bi bi-facebook"></i></button></a>
             <a href="https://linkedin.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-linkedin"></i></button></a>
