--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,23 +1,40 @@
 html, body {
   font-family: "Montserrat", sans-serif;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  width: 100%;
   padding-top: 80px;
+}
+
+.bot-answer {
+  background-color: #8080802e;
+  padding: 4px 10px;
+  border-radius: 10px;
+  margin: 1em;
+  display: inline-block;
+  margin-inline-start: 40%;
+}
+
+.user-text {
+  background-color: #20daae3d;
+  padding: 4px 10px;
+  border-radius: 10px;
+  margin: 1em;
+  display: inline-block;
 }
 
 .map {
   width: 95%;
-  height: 300px;
+  height: 85%;
   background: grey;
 }
 
 .jumbotron {
   text-align: center;
   padding: 50px;
-  margin-right: 4px;
-  margin-left: 4px;
-  margin-bottom: 130px;
+  margin-right: 8px;
+  margin-left: 8px;
+  margin-top: auto;
 }
 
 .my-title {
@@ -43,12 +60,12 @@ html, body {
 }
 
 .chat-box {
-  max-width: 700px;
-  margin-bottom: 130px;
+  min-width: 95%;
 }
 
 .display-text {
-  height: 300px;
+  height: 30em;
+  margin-bottom: 8px;
   overflow: auto;
 }
 
