--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,11 +44,9 @@
         {% block header %}{% endblock %}
     </header>
 
-    <div>
-        {% block container %}{% endblock %}
-    </div>
+    {% block container %}{% endblock %}
 
-    <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
+    <footer class="container-fluid bg-dark text-white mt-auto py-3">
         <div class="container footer-icons">
             <a href="https://github.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-github"></i></button></a>
