--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -2,8 +2,10 @@ html, body {
   font-family: "Montserrat", sans-serif;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  justify-content: center;
+  min-height: 100vh;
   padding-top: 80px;
+  padding-bottom: 50px;
 }
 
 .bot-answer {
@@ -34,7 +36,6 @@ html, body {
   padding: 50px;
   margin-right: 8px;
   margin-left: 8px;
-  margin-top: auto;
 }
 
 .my-title {
