--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
 
     {% block container %}{% endblock %}
 
-    <footer class="container-fluid bg-dark text-white mt-auto py-3">
+    <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
         <div class="container footer-icons">
             <a href="https://github.com"><button class="btn btn-secondary" type="button"><i
                         class="bi bi-github"></i></button></a>
