--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -22,14 +22,15 @@ html, body {
 .user-text {
     background-color: #20daae3d;
     padding: 4px 10px;
-    border-radius: 10px;
+    border-radius: 30px;
     margin: 1em;
     display: inline-block;
 }
 
 .map {
-    width: 95%;
-    height: 85%;
+    width: 295px;
+    height: 300px;
+    margin: auto;
     background: grey;
 }
 
