--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container chat-box">
     <div class="card display-text">
         <div class="card-body" id="chat-zone">
-            <p>Bonjour, je suis grandpy le super robot !</p>
+            <p class="bot-text">Hey, c'est grandpy ! Indique moi une localisation :)</p>
         </div>
     </div>
     <form>
