--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,27 +8,36 @@ html, body {
   padding-bottom: 50px;
 }
 
-.bot-answer {
+#chat-zone {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  padding: 5%;
+}
+
+.bot-text {
   background-color: #8080802e;
   padding: 4px 10px;
   border-radius: 10px;
-  margin: 1em;
-  display: inline-block;
-  margin-inline-start: 30%;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-inline-end: 50%;
+  margin-right: auto;
 }
 
 .user-text {
   background-color: #20daae3d;
   padding: 4px 10px;
   border-radius: 30px;
-  margin: 1em;
-  display: inline-block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-inline-start: 20%;
+  margin-right: auto;
 }
 
 .map {
   width: 295px;
   height: 300px;
-  margin: auto;
   background: grey;
 }
 
