--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 {% block container %}
 <div class="container chat-box">
     <div class="card display-text">
-        <div class="card-body" id="chat-zone">
+        <div class="chat-zone card-body">
             <p class="bot-text">Hey, c'est grandpy ! Indique moi une localisation :)</p>
         </div>
     </div>
