--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -10,7 +10,7 @@ html, body {
     padding-bottom: 50px;
 }
 
-#chat-zone {
+.chat-zone {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
@@ -21,8 +21,9 @@ html, body {
     background-color: #8080802e;
     padding: 4px 10px;
     border-radius: 10px;
-    margin-inline-end: 50%;
+    max-width: 70%;
     margin-right: auto;
+    margin-bottom: 0;
 }
 
 .user-text {
