--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
     </div>
     <form>
         <div class="form-group">
-            <textarea class="form-control" id="user-input" rows="3"></textarea>
+            <textarea class="form-control" id="user-input" rows="3" placeholder="Enter your location..."></textarea>
         </div>
     </form>
 </div>
