--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -19,7 +19,7 @@ html, body {
   background-color: #8080802e;
   padding: 4px 10px;
   border-radius: 10px;
-  max-width: 70%;
+  max-width: 75%;
   margin-right: auto;
   margin-bottom: 0;
 }
@@ -30,8 +30,8 @@ html, body {
   border-radius: 10px;
   margin-top: 1em;
   margin-bottom: 1em;
-  margin-inline-start: 20%;
-  margin-right: auto;
+  margin-left: auto;
+  max-width: 75%;
 }
 
 .map {
@@ -67,6 +67,10 @@ html, body {
   .navbar-brand {
     font-size: 2rem;
   }
+}
+
+.chat-box {
+  max-width: 800px;
 }
 
 .display-text {
