--- a/app/static/scss/style.scss
+++ b/app/static/scss/style.scss
@@ -21,7 +21,7 @@ html, body {
     background-color: #8080802e;
     padding: 4px 10px;
     border-radius: 10px;
-    max-width: 70%;
+    max-width: 75%;
     margin-right: auto;
     margin-bottom: 0;
 }
@@ -32,8 +32,8 @@ html, body {
     border-radius: 10px;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-inline-start: 20%;
-    margin-right: auto;
+    margin-left: auto;
+    max-width: 75%;
 }
 
 .map {
@@ -59,6 +59,11 @@ html, body {
 
 .navbar-brand {
     @include font-size(2rem);
+}
+
+.chat-box {
+    max-width: 800px;
+
 }
 
 .display-text {
