--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,10 +48,9 @@
 
     <footer class="container-fluid bg-dark text-white mt-auto py-3 fixed-bottom">
         <div class="container footer-icons">
-            <a href="https://github.com" class="btn btn-secondary" type="button"><i class="bi bi-github"></i></a>
-            <a href="https://facebook.com" class="btn btn-secondary facebook-button" type="button"><i
-                    class="bi bi-facebook"></i></a>
-            <a href="https://linkedin.com" class="btn btn-secondary" type="button"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com" class="btn btn-secondary"><i class="bi bi-github"></i></a>
+            <a href="https://facebook.com" class="btn btn-secondary facebook-button"><i class="bi bi-facebook"></i></a>
+            <a href="https://linkedin.com" class="btn btn-secondary"><i class="bi bi-linkedin"></i></a>
         </div>
         {% block footer %}{% endblock %}
     </footer>
