--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
                 <img src="static/images/grandpy_01.png" height="75" class="d-inline-block" alt="">
                 GrandPy Bot !
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="about-me"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".about-me"
                 aria-controls="about-me" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
