--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <link rel="icon" type="image/ico" href="static/icons/grandpy.ico" />
